# storage/api-docs/api-docs.json
@@ -82,6 +82,11 @@
                                         "type": "string",
                                         "example": "TakeBlip"
                                     },
+                                    "Gateway_channel": {
+                                        "description": "Gateway de envio",
+                                        "type": "string",
+                                        "example": "Nao estereis"
+                                    },
                                     "Config_number": {
                                         "description": "Número de telefone do cliente",
                                         "type": "string",
